<resources>
    <!-- Strings related to login -->
    <string name="prompt_server">Sync Server</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">OK</string>
    <string name="registration_confirmation">Note that because your notes are encrypted on your device using your password, Standard Notes does not have a password reset option. You cannot forget your password.</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_login">Failed to login - please check the server, email and password, and that you have a working internet connection</string>
...
    <string name="error_unsupported_algorithm">Unsupported algorithm %1$s</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Strings related to menu if user is logged in -->
    <string name="action_logout">Sign out &amp; delete local data</string>
    <string name="not_logged_in">Sign in or register to your free private account to enable sync and encryption.</string>
    <string name="action_settings">Settings</string>
    <string name="action_toggle_screenshots">Enable Screenshots</string>
    <string name="action_toggle_monospace">Use Monospace font for notes</string>
    <string name="toast_screenshots_enabled">Screenshots are enabled</string>
    <string name="toast_screenshots_disabled">Screenshots are disabled</string>
    <string name="action_feedback">Send feedback</string>
    <string name="feedback_email">android@standardnotes.org</string>
...
    <string name="action_login">Sign in to sync</string>

    <!-- Strings related to notes -->
    <string name="title_activity_note">Compose</string>
    <string name="prompt_title">Title</string>
    <string name="prompt_text">Text</string>
    <string name="action_delete">Delete</string>
    <string name="error_fail_sync">You are offline.</string>
    <string name="sync_retry">Retry</string>
    <string name="error_passwords_mismatch">Passwords do not match</string>
    <string name="sync_progress_saving">Saving…</string>
    <string name="sync_progress_finished">All changes saved</string>
    <string name="sync_progress_error">Offline</string>
    <string name="label_not_synced">Not synced</string>

    <!-- Strings related to tags -->
    <string name="drawer_all_notes">All Notes</string>
    <string name="title_tags">Tags</string>
    <string name="action_tags">@string/title_tags</string>
    <string name="prompt_new_tag">Enter new tag</string>

    <!-- Data export -->
    <string name="label_encrypted">Encrypted</string>
    <string name="label_decrypted">Decrypted</string>
...
